--- a/esfinge.html
+++ b/esfinge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="esfinge">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset= "UTF-8"  />
+<meta http-equiv="Content-Type" content="text/html; charset= "Western"  />
     
     <title>La esfinge</title>
     <link rel="stylesheet" hfef="css/normalize.css">
