--- a/esfinge.html
+++ b/esfinge.html
@@ -15,7 +15,7 @@
 <body>
 
       <ul>
-        <li><a href="index.html">Inicio</a></li>
+        <li><a href="index.html">Inicioo</a></li>
         <li><a href="nuevo.html">Cuento 4</a></li>
         </ul>
       
