--- a/alce.html
+++ b/alce.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html class="esfinge">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset="Western" />
+<meta charset="UTF-8">
 <title>EL ALCE</title>
 
 <link rel="stylesheet" hfef="css/normalize.css">
