--- a/alce.html
+++ b/alce.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html class="esfinge">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8"/>
 <title>EL ALCE</title>
 
 <link rel="stylesheet" hfef="css/normalize.css">
