--- a/esfinge.html
+++ b/esfinge.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="css/cuento2.css">
 </head>
 
-   
-
-
-
-<body>
+  <body>
 
       <ul>
         <li><a href="index.html">Inicioo</a></li>
@@ -39,7 +35,6 @@
 
 <p> <img src="img/alancito.jpg" class="es">
 Edgar Allan Poe nació en Boston, Estados Unidos, el 19 de enero de 1809. Sus padres murieron cuando era niño y fue recogido por un matrimonio adinerado de Richmond, Virginia, aunque nunca fue adoptado oficialmente.</p>  
-
 <p>Se conviritó en un escritor, poeta, crítico y periodista romántico, y es reconocido como uno de los maestros universales del relato corto, del cual fue uno de los primeros representantes en Estados Unidos. Fue renovador de la novela gótica, recordado especialmente por sus cuentos de terror.</p>
 
 <p>A Edgar Allan Poe también se le considera como el inventor del relato detectivesco y contribuyó con varias obras al género emergente de la ciencia-ficción. Entre las mejores obras del escritor estadounidense destacan El Cuervo, Annabel Lee, El pozo y el péndulo, El barril de amontillado, entre otras.</p>
@@ -51,7 +46,25 @@ Edgar Allan Poe nació en Boston, Estados Unidos, el 19 de enero de 1809. Sus pad
 <div class="otro">
 <h2><span>C</span>ritica</h2>
   
-<p>Edgar Allan Poe murió el 7 de octubre de 1849, a los 40 años de edad. Aunque se especuló con que la causa de la muerte tuvo que ver con el alcohol y un fallo cardíaco, nunca se esclarecieron los verdaderos motivos.</p>
+<p>
+La Esfinge , un cuento de terror, que describe la epoca en la cual reynaba la enfermedad del colera y narra la historia
+de la persona que viaja para pasar unos dias con su pariente en la ciudad de Nueva York.
+</p>
+<p>
+La historia basada en alusinaciones de tal persona que describe a un monstruo. Al mirar atravez de una ventana y ver 
+una criatura de enormes proporciones, este hombre llega a pensar que esta vision es el presagio de su muerte, ya que 
+dia con dia la muerte se apoderaba de la ciudad.
+</p>
+<p>
+Durante el terrible reinado del colera, era ovbio pensar en la muerte.
+</p>
+<p>
+El amigo de esta persona, le hace ver su error en la descripcion del terrible monstruo, y mirando
+a travez de la misma ventana, en el mismo lugar donde aquel habia visto semejante atrocidad, comenta
+que lo que ha visto no es nada mas que un "Esfinge Calavera" una clase de insecto, y que no era tan grande
+ni tan terrible como lo habia visto.
+</p>
+
 
 </div>
 
@@ -76,7 +89,7 @@ s.setAttribute('data-timestamp', +new Date());
 <div class="glos">
       <h2><span>G</span>losario</h2>
       <div>
-       <ol>Disencion: Es tosos sin dudua</ol> 
+       <ol>veraniegos: Es tosos sin dudua</ol> 
        <ol>Errado: Es algistosos</ol>
            <ol>indecible:in dudua</ol> 
        <ol>Detrimiento: Echistosos</ol>
