--- a/esfinge.html
+++ b/esfinge.html
@@ -30,7 +30,7 @@
    
 <div class="texto">
      
- <h2><span>R</span>esenia del Autor</h2>  
+ <h2><span>R</span>eseña del Autor</h2>  
 
 
 <p> <img src="img/alancito.jpg" class="es">
@@ -89,14 +89,16 @@ s.setAttribute('data-timestamp', +new Date());
 <div class="glos">
       <h2><span>G</span>losario</h2>
       <div>
-       <ol>veraniegos: Es tosos sin dudua</ol> 
-       <ol>Errado: Es algistosos</ol>
-           <ol>indecible:in dudua</ol> 
-       <ol>Detrimiento: Echistosos</ol>
-           <ol>Topico: Estosos sin dudua</ol> 
-       <ol>Opulento: Es ahistosos</ol>
-           <ol>Esquife: Es sin dudua</ol> 
-       <ol>Loteadas: Es algo chistosos</ol>
+       <ol><strong>Veraniegos</strong>: Del verano o relativo a él</ol> 
+       <ol><strong>Populosa</strong>: Que está habitualmente poblado de gente.</ol>
+           <ol><strong>Mortalidad</strong>: Cantidad de personas que mueren en un lugar y en un 
+           período de tiempo determinados en relación con el total de la población.</ol> 
+       <ol><strong>Replicar</strong>: Responder o contestar a alguien.</ol>
+           <ol><strong>Ominoso</strong>: Que es abominable y merece ser condenado y aborrecido.</ol> 
+       <ol><strong>Perplejo</strong>: Que está confuso y desconcertado y no sabe lo que debe hacer, pensar o decir.</ol>
+           <ol><strong>Paquebote</strong>: Embarcación que lleva correo y pasajeros de un puerto a otro</ol> 
+       <ol><strong>Hirsuto</strong>: Que es áspero, duro y tieso.</ol>
+      <ol><strong>Minucia</strong>: Cosa, detalle o requisito pequeño, de poca estimación, valor o importancia.</ol>
     </div> 
 
 </div>
