--- a/esfinge.html
+++ b/esfinge.html
@@ -12,7 +12,7 @@
 
       <ul>
         <li><a href="index.html">Inicioo</a></li>
-        <li><a href="nuevo.html">Cuento 4</a></li>
+        <li><a href="alconcito.html">El Halcon Decapitado</a></li>
         </ul>
       
       </hr>
