--- a/esfinge.html
+++ b/esfinge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="esfinge">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset="Western" />
+<meta charset="UTF-8">
 <title>LA ESFINGE</title>
 
 <link rel="stylesheet" hfef="css/normalize.css">
