--- a/esfinge.html
+++ b/esfinge.html
@@ -37,7 +37,7 @@
 
 
 <p> <img src="img/alancito.jpg" class="es">
-Edgar Allan Poe rápida en Boston, Estados Unidos, el 19 de enero de 1809. Sus padres murieron cuando era niño y fue recogido por un matrimonio adinerado de Richmond, Virginia, aunque nunca fue adoptado oficialmente.</p>  
+Edgar Allan Poe naciÃ³n en Boston, Estados Unidos, el 19 de enero de 1809. Sus padres murieron cuando era niño y fue recogido por un matrimonio adinerado de Richmond, Virginia, aunque nunca fue adoptado oficialmente.</p>  
 <p>Se conviritó en un escritor, poeta, crítico y periodista romántico, y es reconocido como uno de los maestros universales del relato corto, del cual fue uno de los primeros representantes en Estados Unidos. Fue renovador de la novela gótica, recordado especialmente por sus cuentos de terror.</p>
 
 <p>A Edgar Allan Poe también se le considera como el inventor del relato detectivesco y contribuyó con varias obras al género emergente de la ciencia-ficción. Entre las mejores obras del escritor estadounidense destacan El Cuervo, Annabel Lee, El pozo y el péndulo, El barril de amontillado, entre otras.</p>
