--- a/esfinge.html
+++ b/esfinge.html
@@ -33,16 +33,16 @@
    
 <div class="texto">
      
- <h2><span>R</span>eseña del Autor</h2>  
+ <h2><span>R</span>eseÃ±a del Autor</h2>  
 
 
 <p> <img src="img/alancito.jpg" class="es">
-Edgar Allan Poe naciÃ³n en Boston, Estados Unidos, el 19 de enero de 1809. Sus padres murieron cuando era niño y fue recogido por un matrimonio adinerado de Richmond, Virginia, aunque nunca fue adoptado oficialmente.</p>  
-<p>Se conviritó en un escritor, poeta, crítico y periodista romántico, y es reconocido como uno de los maestros universales del relato corto, del cual fue uno de los primeros representantes en Estados Unidos. Fue renovador de la novela gótica, recordado especialmente por sus cuentos de terror.</p>
+Edgar Allan Poe naciÃ³n en Boston, Estados Unidos, el 19 de enero de 1809. Sus padres murieron cuando era niÃ±o y fue recogido por un matrimonio adinerado de Richmond, Virginia, aunque nunca fue adoptado oficialmente.</p>  
+<p>Se conviritÃ³ en un escritor, poeta, critico y periodista romantico, y es reconocido como uno de los maestros universales del relato corto, del cual fue uno de los primeros representantes en Estados Unidos. Fue renovador de la novela gótica, recordado especialmente por sus cuentos de terror.</p>
 
-<p>A Edgar Allan Poe también se le considera como el inventor del relato detectivesco y contribuyó con varias obras al género emergente de la ciencia-ficción. Entre las mejores obras del escritor estadounidense destacan El Cuervo, Annabel Lee, El pozo y el péndulo, El barril de amontillado, entre otras.</p>
+<p>A Edgar Allan Poe tambiÃ©n se le considera como el inventor del relato detectivesco y contribuyó con varias obras al gÃ©nero emergente de la ciencia-ficciÃ³n. Entre las mejores obras del escritor estadounidense destacan El Cuervo, Annabel Lee, El pozo y el péndulo, El barril de amontillado, entre otras.</p>
   
-<p>Edgar Allan Poe murió el 7 de octubre de 1849, a los 40 años de edad. Aunque se especuló con que la causa de la muerte tuvo que ver con el alcohol y un fallo cardíaco, nunca se esclarecieron los verdaderos motivos.</p>
+<p>Edgar Allan Poe muriÃ³ el 7 de octubre de 1849, a los 40 aÃ±os de edad. Aunque se especulÃ³ con que la causa de la muerte tuvo que ver con el alcohol y un fallo cardiaco, nunca se esclarecieron los verdaderos motivos.</p>
 
 <hr>
 
