--- a/esfinge.html
+++ b/esfinge.html
@@ -93,14 +93,14 @@ s.setAttribute('data-timestamp', +new Date());
 <div class="glos">
       <h2><span>G</span>losario</h2>
       <div>
-       <ol><strong>Veraniegos</strong>: Del verano o relativo a él</ol> 
-       <ol><strong>Populosa</strong>: Que está habitualmente poblado de gente.</ol>
+       <ol><strong>Veraniegos</strong>: Del verano o relativo a Ã©l</ol> 
+       <ol><strong>Populosa</strong>: Que esta habitualmente poblado de gente.</ol>
            <ol><strong>Mortalidad</strong>: Cantidad de personas que mueren en un lugar y en un 
-           período de tiempo determinados en relación con el total de la población.</ol> 
+           periodo de tiempo determinados en relaciÃ³n con el total de la poblaciÃ³n.</ol>
        <ol><strong>Replicar</strong>: Responder o contestar a alguien.</ol>
            <ol><strong>Ominoso</strong>: Que es abominable y merece ser condenado y aborrecido.</ol> 
-       <ol><strong>Perplejo</strong>: Que está confuso y desconcertado y no sabe lo que debe hacer, pensar o decir.</ol>
-           <ol><strong>Paquebote</strong>: Embarcación que lleva correo y pasajeros de un puerto a otro</ol> 
+       <ol><strong>Perplejo</strong>: Que esta confuso y desconcertado y no sabe lo que debe hacer, pensar o decir.</ol>
+           <ol><strong>Paquebote</strong>: EmbarcaciÃ³n que lleva correo y pasajeros de un puerto a otro</ol> 
        <ol><strong>Hirsuto</strong>: Que es áspero, duro y tieso.</ol>
       <ol><strong>Minucia</strong>: Cosa, detalle o requisito pequeño, de poca estimación, valor o importancia.</ol>
     </div> 
